--- a/tigahelp/templates/tigahelp/privacy_tr.html
+++ b/tigahelp/templates/tigahelp/privacy_tr.html
@@ -13,7 +13,7 @@ Gizlilik Politikası
 </div>
 
 <p>
-    Mosquito Alert (geçmişte almış olabileceği veya gelecekte edinebileceği isimlerden herhangi birinde), diğer şeylerin
+    Mosquito Alert (geçmişte almış olabileceği veya gelecekte edinebileceği isimlerden herhangi biriyle), diğer şeylerin
     yanı sıra, gönüllüler tarafından paylaşılan verileri ve görüntüleri toplar ve bunları üçüncü şahısların ve genel
     halkın kullanımına sunar. Mosqutio Alert, gönüllülerinin mahremiyetini korumak için kişisel bilgileri, yani belirli
     bir gerçek kişiyi bireysel olarak tanımlamak için kullanılabilecek bilgileri toplamaktan kaçınmayı amaçlamaktadır.
@@ -59,9 +59,9 @@ Gizlilik Politikası
 <ul>
     <li>Olası sivrisineklerin üreme alanları, sokmaları ve görülmesi ile ilgili olarak gönüllüler tarafından toplanan ve
         gönderilen raporlar (Mosquito Alert şu anda 5 farklı sivrisinek türüne odaklanmaktadır) ve uygulama aracılığıyla
-        kendilerine gönderilen sorulara gönüllülerin yanıtları. Bu, gönüllü gözlemlerinin ve fotoğraflarının (varsa
-        fotoğraf üst veri konumunun yanı sıra), notların veya gönüllünün rapora eklediği diğer bilgilerin tam konumunu
-        içerir.
+        kendilerine gönderilen sorulara gönüllülerin yanıtları. Bu bilgi, gönüllü gözlemlerinin ve fotoğraflarının
+        (varsa fotoğraf üst veri konumunun yanı sıra), notların veya gönüllünün rapora eklediği diğer bilgilerin tam
+        konumunu içerir.
     </li>
     <li>Arka plan modunda ve rastgele zaman aralıklarında örneklenen gönüllülerin yaklaşık konumu hakkında bilgi alır.
         Bu bilgiler, gönüllüler tarafından keşfedilen coğrafi alanları bilmek için (örnekleme çabası, yani hangi
