--- a/tigahelp/templates/tigahelp/project_about_tr.html
+++ b/tigahelp/templates/tigahelp/project_about_tr.html
@@ -19,8 +19,8 @@ About The Project
 
 
         <h2>Mosquito Alert nedir?</h2>
-        <p>Mosquito Alert, dang humması, Zika, chikungunya ve Batı Nil ateşi gibi hastalıkları taşıyan sivrisinek türlerini incelemek, izlemek ve kontrol etmek için çeşitli katılımcılar arasında işbirliğini kolaylaştıran bir vatandaş bilimi platformudur.
-            Bu proje, vatandaşlara, bilim adamlarına, halk sağlığı uzmanlarına ve eğitimcilere kilit roller vermektedir. Mosquito Alert, herkesin veri toplayıp paylaşmasına (1) sivrisinek raporlarını etiketleyip katılımcılara geri dönüş yapan profesyonel entomologlarla birlikte veri doğrulamasına izin verir (2). Veriler doğrulandıktan sonra, etkileşimli bir web haritası (3) aracılığıyla genel kamuoyuna sunulur. Hastalık vektörü sivrisinekleri incelemek ve izlemek için bilim adamları (4) ve halk sağlığı çalışanları (5) tarafından güvenilir bir kaynak yaratmaktadır.</p>
+        <p>Mosquito Alert, dang humması, Zika, chikungunya ve Batı Nil ateşi gibi hastalıkları taşıyan sivrisinek türlerini incelemek, izlemek ve kontrol etmek için çeşitli katılımcılar arasında işbirliğini kolaylaştıran bir vatandaş bilimi platformudur.</p>
+        <p>Bu proje, vatandaşlara, bilim adamlarına, halk sağlığı uzmanlarına ve eğitimcilere kilit roller vermektedir. Mosquito Alert, herkesin veri toplayıp paylaşmasına (1) sivrisinek raporlarını etiketleyip katılımcılara geri dönüş yapan profesyonel entomologlarla birlikte veri doğrulamasına izin verir (2). Veriler doğrulandıktan sonra, etkileşimli bir web haritası (3) aracılığıyla genel kamuoyuna sunulur. Hastalık vektörü sivrisinekleri incelemek ve izlemek için bilim adamları (4) ve halk sağlığı çalışanları (5) tarafından güvenilir bir kaynak yaratmaktadır.</p>
         <p class="centeredImage">
 
             <img style="max-width: 100%; height: auto;" src="{% static "tigahelp/what_happens.jpg" %}">
@@ -52,7 +52,7 @@ About The Project
         </p>
 
 
-        <p>Mosquito Alert ayrıca katılımcıların cihazlarının yaklaşık konumlarını da toplar ve katılımcı aksini tercih etmemişse bu konumları her gün rastgele 5 kez örnekler. Konumlar, Mosquito Alert sunucusuna gönderilmeden önce 0,025 x 0,025 derece enlem ve boylam (yaklaşık 2x2 km) ızgarada maskelenir. Gizlilik nedenleriyle, tam konum değil yalnızca ızgara kare tanımlayıcısı Mosquito Alert ile paylaşılır. Bu bilgiler, araştırmacıların sivrisinek popülasyonları hakkında daha iyi tahminler yapmalarına olanak tanır, örneğin potansiyel olarak çok sayıda sivrisinek bulunan ancak az sayıda katılım olan yerlerden çok sayıda katılım gelen yerlerin ayırt edilmesine olanak sağladığından, bilimsel açıdan oldukça değerlidir. Katılımcı lokasyonlar, ekolojide örnekleme çabası olarak bilinen şey hakkında bilgi sağlar.</p>
+        <p>Mosquito Alert ayrıca katılımcıların cihazlarının yaklaşık konumlarını da toplar ve katılımcı aksini tercih etmemişse bu konumları her gün rastgele 5 kez örnekler. Konumlar, Mosquito Alert sunucusuna gönderilmeden önce 0,025 x 0,025 derece enlem ve boylam (yaklaşık 2x2 km) ızgarada maskelenir. Gizlilik nedenleriyle, tam konum değil yalnızca ızgara kare tanımlayıcısı Mosquito Alert ile paylaşılır. Bu bilgiler, araştırmacıların sivrisinek popülasyonları hakkında daha iyi tahminler yapmalarına olanak tanır, örneğin potansiyel olarak çok sayıda sivrisinek bulunan ancak az sayıda katılım olan yerlerden çok sayıda katılım gelen yerlerin ayırt edilmesine olanak sağladığından, bilimsel açıdan oldukça değerlidir. Katılımcı lokasyonları, ekolojide "örnekleme çabası" olarak geçen konu hakkında bilgi sağlar.</p>
 
 
         <p class="centeredImage">
