--- a/tigahelp/templates/tigahelp/about_us_tr.html
+++ b/tigahelp/templates/tigahelp/about_us_tr.html
@@ -7,23 +7,25 @@ About Us
 
 {% block content %}
 
-<h2>Koordinatör Varlıklar:</h2>
-<p>Mosquito Alert şu kamu araştırma kurumları tarafından yönetilmektedir: İspanya Ulusal Araştırma Konseyi'nin Blanes
-    İleri Araştırmalar Merkezi (<strong>CEAB-CSIC</strong>), Ekolojik Araştırma ve Ormancılık Uygulamaları Merkezi (<strong>CREAF</strong>) ve Pompeu
-    Fabra Üniversitesi (<strong>UPF</strong>). Catalan Institute for Research and Advanced Studies (<strong>ICREA</strong>) da katılım göstermektedir.</p>
+<h2>Koordinatör Kurumlar:</h2>
+<p>
+    Mosquito Alert aşağıdaki kamu araştırma kurumları tarafından yönetilmektedir: İspanya Ulusal Araştırma Konseyi'nin
+    Blanes İleri Araştırmalar Merkezi (<strong>CEAB-CSIC</strong>), Ekolojik Araştırma ve Ormancılık Uygulamaları
+    Merkezi (<strong>CREAF</strong>) ve Pompeu Fabra Üniversitesi (<strong>UPF</strong>). Katalan Araştırma ve
+    Geliştirme Enstitüsü (<strong>ICREA</strong>) da katılım göstermektedir.
+</p>
 <p class="centeredImage">
     <img style="max-width: 100%; height: auto;" src="{% static "tigahelp/colaboradors_about_us.jpg" %}">
 </p>
 
-<h2>Collaborators</h2> <p>Mosquito Alert is made possible also thanks to the participation of a number of experts
-    (professionals who, for example, validate citizen scientists’ data), and entities from various countries working in
-    the field of public health, invasive species control, and environmental education.</p> <h2>Financing and
-    participation in projects</h2> <p>Mosquito Alert participates in competitive projects for research, scientific
-    communication dissemination (including the Spanish <em>Plan Estal</em>, the EU’s Horizon 2020 funding line, and “la
-    Caixa” Foundation projects, among others). Mosquito Alert also relies on contributions of resources from the leading
-    and collaborating entities.</p> <p>More information on entities, collaborations and projects can be found at <a
-        href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a> and on social networks.</p>
+<h2>Kolaboratörler</h2> <p>Mosquito Alert, bir dizi uzmanın (örneğin, vatandaş bilim insanlarının verilerini doğrulayan profesyoneller) ve çeşitli ülkelerde bulunan halk sağlığı, istilacı türlerin kontrolü ve çevre eğitimi üzerinde çalışan kişilerin katılımı sayesinde mümkün hale gelmiştir.</p>
 
-<p class="centeredImage"><img style="max-width: 100%; height: auto;" src="{% static "tigahelp/banner_web.jpg" %}"></p>
+<h2>Projelere finansman ve katılım</h2>
+
+<p>Mosquito Alert, araştırmalar ve bilimsel iletişimin yaygınlaştırılmasına yönelik rekabetçi projelere katılım sağlar (bunların arasında AB'nin Horizon 2020 desteği ile gerçekleşen İspanyol <em>"Estal Planı"</em> ve "la Caixa" Vakfı projeleri bulunmaktadır). Mosquito Alert aynı zamanda önde gelen ve bizimle işbirliği yapan kuruluşlardan gelen kaynaklarla da desteklenmektedir.</p>
+
+<p>Kurumlar, işbirlikleri ve projeler hakkında daha fazla bilgi <a href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a> adresinde ve sosyal ağlarda bulunabilir.</p>
+
+<p class="centeredImage"><img style="max-width: 100%; height: auto;" src="{% static " tigahelp/banner_web.jpg" %}"></p>
 
 {% endblock %}
