--- a/tigahelp/templates/tigahelp/license_tr.html
+++ b/tigahelp/templates/tigahelp/license_tr.html
@@ -12,27 +12,19 @@ Mosquito Alert Lisans
 </div>
 
 <p>
-    Mosquito Alert, dang humması, Zika, Chikungunya veya Batı Nil ateşi gibi hastalıkların taşıyıcıları olan
-    sivrisineklerin çalışmadaki çeşitli katılımcılar arasında işbirliğine, izlenmesine ve kontrolüne izin veren bir
-    vatandaş bilimi sistemidir. Mosquito Alert uygulaması (eski adıyla Tigatrapp), herkesin Mosquito Alert uygulamasına
-    katılmasına izin veren cep telefonları ve tabletler için bir uygulamadır.
+    Mosquito Alert, dang humması, Zika, Chikungunya veya Batı Nil ateşi gibi hastalıkların taşıyıcıları olan sivrisinek türlerinin izlenmesine ve kontrolüne izin veren, çalışmadaki çeşitli katılımcılar arasında işbirliği sağlayan bir vatandaş bilimi sistemidir. Mosquito Alert uygulaması (eski adıyla Tigatrapp), herkesin Mosquito Alert uygulamasına katılmasına izin veren cep telefonları ve tabletler için bir uygulamadır.
 </p>
 
 <p>
-    Mosquito Alert uygulaması aşağıdaki kurumlar tarafından geliştirilmiştir: İspanya Ulusal Araştırma Konseyi'nin
-    Blanes İleri Araştırmalar Merkezi (CEAB-CSIC), Ekolojik Araştırma ve Orman Uygulamaları Merkezi (CREAF), Pompeu
-    Fabra Üniversitesi (UPF) ve Katalan Enstitüsü Araştırma ve İleri Araştırmalar için (ICREA).
+    Mosquito Alert uygulaması aşağıdaki kurumlar tarafından geliştirilmiştir: İspanya Ulusal Araştırma Konseyi'nin Blanes İleri Araştırmalar Merkezi (CEAB-CSIC), Ekolojik Araştırma ve Orman Uygulamaları Merkezi (CREAF), Pompeu Fabra Üniversitesi (UPF) ve Katalan Araştırma ve Geliştirme Enstitüsü (ICREA).
 </p>
 
 <p>
-    Mosquito Alert uygulamasının kaynak kodu, <a href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>
-    adresindeki proje web sitesinde mevcuttur.
+    Mosquito Alert uygulamasının kaynak kodu, <a href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a> adresindeki proje web sitesinde mevcuttur.
 </p>
 
 <p>
-    Yazarlar (alfabetik sırayla): Frederic Bartumeus, Berj Dekramanjian, Roger Eritja, Santi Escartin, Agusti Escobar,
-    Joan Garriga, Misericordia Girones, Zivko Juznic-Zonta, Aitana Oltra, John RB Palmer, Ariadna Pena, Alex
-    Richter-Boix, Isis Sanpera Alex Tarrago, Marina Torres.
+    Yazarlar (alfabetik sırayla): Frederic Bartumeus, Berj Dekramanjian, Roger Eritja, Santi Escartin, Agusti Escobar, Joan Garriga, Misericordia Girones, Zivko Juznic-Zonta, Aitana Oltra, John RB Palmer, Ariadna Pena, Alex Richter-Boix, Isis Sanpera Alex Tarrago, Marina Torres.
 </p>
 
 <p>
@@ -40,31 +32,25 @@ Mosquito Alert Lisans
         href="https://globalmosquitoalert.com/">https://globalmosquitoalert.com/</a>) ile işbirliği içinde.
 </p>
 
-<p> Roger Eritja tarafından yazılan uygulamanın Sivrisinek kılavuzundaki sivrisinek resimleri, tüm hakları
-    saklıdır. </p>
+<p> Roger Eritja tarafından yazılan uygulamanın Sivrisinek rehberindeki sivrisinek resimlerinin tüm hakları saklıdır. </p>
 
-<p> Sivrisinek kılavuzundaki sivrisinek resimleri ve JL Ordonez, CC BY 2.0 tarafından uygulamanın Eğitimi </p>
+<p> Uygulamanın Sivrisinek kılavuzundaki sivrisinek resimleri JL Ordonez, CC BY 2.0 tarafından hazırlanmıştır. </p>
 
 <p>
-    Drain Icon, Alex Richter tarafından Free Icons Library's Drain Icon # 338924'ten değiştirilmiştir (<a
-        href="https://icon-library.net/icon/drain-icon-3.htm">https://icon-library.net/icon/drain-icon-3.htm</a>)
+    Drain Icon, Alex Richter tarafından, Free Icons Library's Drain Icon # 338924'ten değiştirilmiştir (<a
+        href="https://icon-library.net/icon/drain-icon-3.htm">https://icon-library.net/icon/drain-icon-3.htm</a>). Kamu malı.
 </p>
 
-<p> Mosquito Bite, Alex Richter-Boix tarafından modifiye edilmiş, Mosquito Bite by Sveta_Aho, Adobe Stock Standard
-    License </p>
+<p> Mosquito Bite, Alex Richter-Boix tarafından Mosquito Bite by Sveta_Aho, Adobe Stock Standard License'dan modifiye edilmiştir. </p>
 
-<p> Life döngüsü, Cep telefonu silueti, Arkaplan izleme çizimi, Alex Richter-Boix, CC BY 2.0. </p>
+<p> Hayat döngüsü, Cep telefonu silueti, Arkaplan izleme çizimi, Alex Richter-Boix, tarafından çizilmiştir CC BY 2.0. </p>
 
 <p>
-    Mosquito Alert ücretsiz bir yazılımdır: Özgür Yazılım Vakfı tarafından yayınlanan GNU Genel Kamu Lisansı (lisans
-    sürümü 3 veya üzeri) hükümleri altında yeniden dağıtılabilir ve / veya değiştirilebilir.
+    Mosquito Alert ücretsiz bir yazılımdır: Özgür Yazılım Vakfı tarafından yayınlanan GNU Genel Kamu Lisansı (lisans sürümü 3 veya üzeri) hükümleri altında yeniden dağıtılabilir ve / veya değiştirilebilir.
 </p>
 
 <p>
-    Bu program yararlı olacağı ümidiyle, ancak HERHANGİ BİR GARANTİ OLMAKSIZIN; BELİRLİ BİR AMACA UYGUNLUK veya zımni
-    garanti olmadan. Daha fazla ayrıntı için GNU Genel Kamu Lisansına bakın. Bu programla birlikte GNU Genel Kamu
-    Lisansının bir kopyasını almış olmalısınız. Değilse, <a href="http://www.gnu.org/licenses">http://www.gnu.org/licenses</a>
-    adresine bakın.
+    Bu program yararlı olacağı ümidiyle, ancak HERHANGİ BİR GARANTİ OLMAKSIZIN; PAZARLANABİLİRLİĞİ veya BELLİ BİR AMACA UYGUNLUĞU ile ilgili garanti ima dahi edilmeksizin paylaşılmıştır. Daha fazla ayrıntı için GNU Genel Kamu Lisansına bakın. Bu programla birlikte GNU Genel Kamu Lisansının bir kopyasını almış olmalısınız. Değilse, <a href="http://www.gnu.org/licenses">http://www.gnu.org/licenses</a> adresine bakın.
 </p>
 
 {% endblock %}
