--- a/tigahelp/templates/tigahelp/project_about_mk.html
+++ b/tigahelp/templates/tigahelp/project_about_mk.html
@@ -20,14 +20,14 @@ About The Project
 
         <h2>Што е Предупредување за комарци?</h2>
         <p>Предупредување за комарци е научна платформа за граѓаните која овозможува соработка помеѓу различни учесници
-            за да научат, мониторинг и контрола на видовите на комарци кои пренесуваат болест како Денга, Зика,
-            Чикунгунија и Западнонилска треска.</p>
-        <p>Проектот дава клучни правила на граѓаните, научниците, експертите во јавното здравство и едукаторите.
+            со цел да се проучат, следат и сузбијат видовите на комарци кои ги пренесуваат предизвикувачите на болест
+            како Денга, Зика, Чикунгунија и Западнонилска треска.</p>
+        <p>Проектот дава клучна улога на граѓаните, научниците, експертите во јавното здравство и едукаторите.
             Предупредување за комарци дава можност секој еден да собира и споделува податоци (1) и ангажира
-            професионални ентомолози за поврдување на податоците, кои ги етикетираат извештаите за комарците и ги
-            споделуваат со учесниците(2). Кога ќе се потврди податокот е достапен до целата јавност преку интерактивна
-            веб-мапа(3). Тоа е исто така споделено од научниците (4) и јавно здравствени агенти (5) да изучат и да ги
-            мониторираат комарците како вектори на болести.</p>
+            професионални ентомолози во процесот на потврдување на податоците, кои ги означуваат извештаите за комарците
+            и им одговараат на учесниците(2). Кога ќе се потврди податокот е достапен до целата јавност преку
+            интерактивна веб-мапа(3). Тоа е исто така е поткрепено од научниците (4) и агенти во јавното здравство (5)
+            во проучување и следење на комарците како вектори на патогени.</p>
 
         <p class="centeredImage">
 
@@ -42,16 +42,14 @@ About The Project
             области и пордолжуваат да се распространуваат. Aedes комарците имаат големо значење за здравјето во иднина ,
             бидејќи нивната способност да пренесуваат болести како Денга, Зика, Чикунгунија. Додека , куќниот комарец
             (Culex pipiens) е значаен за пренесување на вирусот на Западен Нил. Ризикот од комарците по јавното здравје
-            ги прави многу значајни за да биде мониторирана нивната популација. </p>
+            ги прави многу значајни за да биде следена нивната популација.</p>
         <p>Поради комплексноста на проблемот, Предупредувањето за комарците е отворен за надзорот и истражувањето за
             јавноста , овозможувајќи соработка помеѓу различни учесници преку нејзината апликација и нејзините други
             платформи и заедници.</p>
         <h2>Какви податоци се собораат?</h2>
-        <p>Се собираат податоци на 5 видови на комарци: Тигрестиот комарц (Aedes albopictus), комарецот на жолта треска
-            (Aedes aegypti), комарецот на каменести базени(Aedes japonicus), корејски комарец (Aedes koreicus) и
-            обичниот комарец (Culex pipiens).</p>
-        <p>За овие видови, податоците се добиваат од возрасните комарци и нивните места на размножување и хранење. Се од
-            овие податоци е важно за подобро да ги разбереме овие видови и за мониторинг и нивна контрола.</p>
+        <p>Се собираат податоци на 5 видови на комарци: тигрестиот комарц (Aedes albopictus), комарецот на жолта треска
+            (Aedes aegypti), јапонски комарец (Aedes japonicus), корејски комарец (Aedes koreicus) и куќниот комарец
+            (Culex pipiens).</p>
 
 
         <p class="centeredImage">
@@ -60,10 +58,8 @@ About The Project
 
         </p>
 
-
-        <p>За овие видови, податоците се добиваат од возрасните комарци и нивните места на размножување и хранење. Се од
-            овие податоци е важно за подобро да ги разбереме овие видови и за мониторинг и нивна контрола.</p>
-
+        <p>За овие видови, податоците се добиваат од возрасните комарци и нивните места на размножување и нивните убоди.
+            Сите овие податоци се важни за подобро да ги разбереме овие видови и за следење и нивно сузбивање.</p>
 
         <p class="centeredImage">
 
@@ -73,14 +69,14 @@ About The Project
 
 
         <p>Предупредување за комарци исто така собира приближни локации од уредите на учесниците, примероците од овие
-            локации се од случајни 5 пати за секој ден, освен ако учесникот не се определил за оваа динамика. Локациите
-            се одредени на мрежа од 0,025х0,025 степени латитуда и лонгитуда (приближно 2х2км) пред да бидат испратени
-            во серверот на Предупредување за комарци. За лична информација, само идентификаторот за мрежниот квадрат е
-            всушност споделен со Предупредување за комарци, не точната локација. Оваа информација е многу значајна од
-            научен аспект, тоа им овозможува на истражувачите да направат подобра проценка за популацијата на комарци,
-            присутните видови, на пример, местата со неколку комарци од местата со неколку учесници(но потенцијално со
-            многу комарци). Учесникот преку локацијата дава податоци за она што е познато во екологијата каде што ги
-            земале примероците.</p>
+            локации се од случајни 5 пати за секој ден, освен ако учесникот не го оневозможил тоа. Локациите се одредени
+            на координатна мрежа од 0,025х0,025 степени географска ширина и должина (приближно 2х2км) пред да бидат
+            испратени во серверот на Предупредување за комарци. Поради заштита на приватноста, само идентификаторот за
+            мрежниот квадрат е всушност споделен со Предупредување за комарци, не точната локација. Оваа информација е
+            многу значајна од научен аспект, тоа им овозможува на истражувачите да направат подобра проценка за
+            популацијата на комарци, присутните видови, на пример, местата со неколку комарци од местата со неколку
+            учесници(ако потенцијално се многу комарци). Учесникот преку локацијата дава податоци за она што е познато
+            во екологијата каде што ги земале примероците.</p>
 
 
         <p class="centeredImage">
@@ -94,15 +90,16 @@ About The Project
         <p>Еве неколку примери:</p>
         <ul>
             <li>Испратените извештаи од луѓето до Предупредување за комарци, се докажаа во последниве години како
-                ефективен рано предупредувачки систем против нови видови на комарци. Системот се употребува да се
-                мониторираат веќе утврдената полулација на комарци и да се откирие нова популација.
+                ефективен рано предупредувачки систем против нови видови на комарци. Системот се употребува да се следи
+                веќе утврдената полулација на комарци и да се откирие нова популација.
             </li>
-            <li>Набљудувањата на комарците, местата за размножување и хранење им помага на научниците и јавно
+            <li>Набљудувањата на комарците, местата за размножување и нивните убоди им помага на научниците и јавно
                 здравствените менаџери да проценат ризик и да ја менаџираат популацијата на вектори кои пренесуваат
                 болести. Со цел да се процени густината на популацијата на дадена локација, многу е важно да се
                 прилагоди набљудувањето врз основа на земените мостри. За да се направи тоа, апликацијата
                 Предупредувањето за комарци собира податоци на приближна локација преку уредите во случајни периоди на
-                деновите. Локациите се означени на мрежа приближно 2х2 км за да се заштити приватноста.
+                деновите. Локациите се означени на координатна мрежа приближно 2х2 км за да се заштити приватноста на
+                учесникот.
             </li>
             <li>Во моментов се работи на развој на моментална состојба, партиципативно и динамично предвидување на
                 епидемиолошки ризик.
@@ -113,7 +110,6 @@ About The Project
         <p><a href="http://www.mosquitoalert.com/en/"> www.mosquitoalert.com </a></p>
         <p>Во апликацијата има поставки каде што ќе најдете туторијал за учесниците, клуч за детерминација на комарците,
             политика на приватност и условите на користење, и информации околу субјектите вклучени во овој проект.</p>
-        <p></p>
 
 
     </div>
