Fixed albanian sq

--- a/tigahelp/templates/tigahelp/license_sq.html
+++ b/tigahelp/templates/tigahelp/license_sq.html
@@ -11,33 +11,19 @@
 <h2>Liçensë</h2>
 </div>
 
-<p>
-    Aplikacioni "Mosquito Alert" është një sistem mbi shkencën qytetare që lejon bashkëpunimin midis aktorëve të ndryshëm në studim, monitorimin dhe kontrollin e mushkonjave që janë vektorë të sëmundjeve si dengue, chikungunya, Zika dhe virusi i Nilit perëndimor. Aplikacioni "Mosquito Alert" (më parë i quajtur Tigatrapp), është një aplikacion për përdorim në celularë dhe tableta, të cilët i lejojnë çdonjërit të marrin pjesë tek Aplikacioni "Mosquito Alert".
-</p>
+<p>Aplikacioni "Mosquito Alert" është një sistem mbi shkencën qytetare që lejon bashkëpunimin midis aktorëve të ndryshëm në studim, monitorimin dhe kontrollin e mushkonjave që janë vektorë të sëmundjeve si dengue, chikungunya, Zika dhe virusi i Nilit perëndimor. Aplikacioni "Mosquito Alert" (më parë i quajtur Tigatrapp), është një aplikacion për përdorim në celularë dhe tableta, të cilët i lejojnë çdonjërit të marrin pjesë tek Aplikacioni "Mosquito Alert".</p>
 
-<p>
-    Aplikacioni "Mosquito Alert" është zhvilluar nga këto institucione: Qendra Kërmikore Këshillimore Kombëtare Spanjolle për Studime të Avancuara e Blanes (CEAB-CSIC), Qendra për Kërkime të Aplikuara Ekologjike dhe Pyjore (CREAF), Universiteti Pompeu Fabra (UPF) dhe Instituti Katalan për Kërkime dhe Studime të Avancuara (ICREA).
-</p>
+<p>Aplikacioni "Mosquito Alert" është zhvilluar nga këto institucione: Qendra Kërkimore Këshillimore Kombëtare Spanjolle për Studime të Avancuara e Blanes (CEAB-CSIC), Qendra për Kërkime të Aplikuara Ekologjike dhe Pyjore (CREAF), Universiteti Pompeu Fabra (UPF) dhe Instituti Katalan për Kërkime dhe Studime të Avancuara (ICREA).</p>
 
-<p>
-    Burimi i kodit për Aplikacioni "Mosquito Alert" është i disponueshëm në faqen e internetit të projektit www.mosquitoalert.com.
-</p>
+<p>Burimi i kodit për Aplikacioni "Mosquito Alert" është i disponueshëm në faqen e internetit të projektit <a href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>.</p>
 
-<p>
-    Autorët (në rend alfabetik): Frederic Bartumeus, Berj Dekramanjian, Roger Eritja, Santi Escartin, Agusti Escobar, Joan Garriga, Misericordia Girones, Zivko Juznic- Zonta, Aitana Oltra, John R.B. Palmer, Ariadna Pena, Alex Richter-Boix, Isis Sanpera, Alex Tarrago, Marina Torres.
-</p>
+<p>Autorët (në rend alfabetik): Frederic Bartumeus, Berj Dekramanjian, Roger Eritja, Santi Escartin, Agusti Escobar, Joan Garriga, Misericordia Girones, Zivko Juznic- Zonta, Aitana Oltra, John R.B. Palmer, Ariadna Pena, Alex Richter-Boix, Isis Sanpera, Alex Tarrago, Marina Torres.</p>
 
-<p>
-    Në bashkëpunim me komunitetin AIM COST (<a href="https://www.aedescost.eu/">https://www.aedescost.eu/</a>) dhe Aplikacionin "Global Mosquito Alert (<a href="https://globalmosquitoalert.com/">https://globalmosquitoalert.com/</a>).
-</p>
+<p>Në bashkëpunim me komunitetin AIM COST (<a href="https://www.aedescost.eu/">https://www.aedescost.eu/</a>) dhe Aplikacionin "Global Mosquito Alert (<a href="https://globalmosquitoalert.com/">https://globalmosquitoalert.com/</a>).</p>
 
-<p>
-    Pamjet e mushkonjave në udhëzuesin e mushkonjave në aplikacion nga Roger Eritja, të gjitha të drejtat janë të rezervuara.
-</p>
+<p>Pamjet e mushkonjave në udhëzuesin e mushkonjave në aplikacion nga Roger Eritja, të gjitha të drejtat janë të rezervuara.</p>
 
-<p>
-    Ilustrimet e mushkonjave tek udhëzuesi i mushkonjave dhe pjesa praktike e aplikacionit nga JL Ordonez, CC BY 2.0,
-</p>
+<p>Ilustrimet e mushkonjave tek udhëzuesi i mushkonjave dhe pjesa praktike e aplikacionit nga JL Ordonez, CC BY 2.0,</p>
 
 <p>
     Ikonat e pusetave dhe kanalizimeve, modifikuar nga Alex Richter, nga Libraria e Lirë e Ikonave të Pusetave dhe Kanalizimeve # 338924 (<a href="https://icon-library.net/icon/drain-icon-3.htm">https://icon-library.net/icon/drain-icon-3.htm</a>). Domeni publik.
@@ -56,7 +42,7 @@
 </p>
 
 <p>
-    Ky program është shpërndarë me shpresën që ai do të jetë i përdorshëm, por PA NDONJË GARANCI; madje pa garancinë e mirëkuptuar të TREGTUESHMËRISË ose PËRSHTATSHMËRISË PËR NJË QËLLIM TË VEÇANTË. Shihni GNU Licensën e Përgjithshme Publike për më shumë detaje. Duhet të keni marrë një kopje të Licensës së Përgjithshme Publike së bashku me këtë program <a href="http://www.gnu.org/licenses">http://www.gnu.org/licenses</a>.
+    Ky program është shpërndarë me shpresën që ai do të jetë i përdorshëm, por PA NDONJË GARANCI; madje pa garancinë e mirëkuptuar të TREGTUESHMËRISË ose PËRSHTATSHMËRISË PËR NJË QËLLIM TË VEÇANTË. Shihni GNU Licensën e Përgjithshme Publike për më shumë detaje. Duhet të keni marrë një kopje të Licensës së Përgjithshme Publike së bashku me këtë program. <a href="http://www.gnu.org/licenses">http://www.gnu.org/licenses</a>.
 </p>
 
 {% endblock %}
