--- a/tigahelp/templates/tigahelp/scoring_sq.html
+++ b/tigahelp/templates/tigahelp/scoring_sq.html
@@ -42,8 +42,7 @@ Mosquito Alert Score Info
 
         <h2>Paneli i pikëve</h2>
         <p>Renditja globale arrihet duke klikuar tek pikët në ekranin kryesor. Shtypja e një pozicioni renditës do të
-            shfaq numrin e proporcionit të pikëve maksimale dhe minimale (breakdown points) që janë fituar nga
-            përdoruesi.</p>
+            shfaq numrin e proporcionit të pikëve maksimale dhe minimale që janë fituar nga përdoruesi.</p>
         <p>Po të klikoni mbi "Më shumë detaje" do të arrini panelin e numrit të proporcionit të pikëve maksimale dhe
             minimale.</p>
         <p>Në këtë seksion gjendet lista e raporteve të dërguara me pikët e fituara në secilin prej tyre. Raportet janë
