Trying to fix strange chars in notifs again, alternate method

--- a/tigaserver_app/templates/tigaserver_app/award_notification_el.html
+++ b/tigaserver_app/templates/tigaserver_app/award_notification_el.html
@@ -1,7 +1,7 @@
 {% extends "tigaserver_app/award_notification.html" %}
 
 {% block title_block %}
-    <title>Μόλις λάβατε ένα βραβείο πόντων!</title>
+    <title>&Mu;ό&lambda;&iota;&sigmaf; &lambda;ά&beta;&alpha;&tau;&epsilon; έ&nu;&alpha; &beta;&rho;&alpha;&beta;&epsilon;ί&omicron; &pi;ό&nu;&tau;&omega;&nu;!</title>
 {% endblock %}
 
 {% block title_header_block %}
@@ -9,11 +9,11 @@
 {% endblock %}
 
 {% block amount_xp_awarded %}
-    <p>Μόλις λάβατε πόντους <b style="color:red;">{{ amount_awarded }}</b></p>
+    <p>'&Mu;ό&lambda;&iota;&sigmaf; &lambda;ά&beta;&alpha;&tau;&epsilon; &pi;ό&nu;&tau;&omicron;&upsilon;&sigmaf;' <b style="color:red;">{{ amount_awarded }}</b></p>
 {% endblock %}
 
 {% block reason_awarded %}
-    <p>Επειδή: {{ reason_awarded }}</p>
+    <p>&Epsilon;&pi;&epsilon;&iota;&delta;ή: {{ reason_awarded }}</p>
 {% endblock %}
 
 {% block report_related %}
@@ -23,5 +23,5 @@
 {% endblock %}
 
 {% block congratulations %}
-    <p>Συγχαρητήρια!</p>
+    <p>&Sigma;&upsilon;&gamma;&chi;&alpha;&rho;&eta;&tau;ή&rho;&iota;&alpha;!</p>
 {% endblock %}
