--- a/tigaserver_app/templates/tigaserver_app/award_notification_it.html
+++ b/tigaserver_app/templates/tigaserver_app/award_notification_it.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block reason_awarded %}
-    <p>Perché: {{ reason_awarded }}</p>
+    <p>Perch&eacute;: {{ reason_awarded }}</p>
 {% endblock %}
 
 {% block report_related %}
