--- a/tigaserver_app/templates/tigaserver_app/award_notification_sq.html
+++ b/tigaserver_app/templates/tigaserver_app/award_notification_sq.html
@@ -1,7 +1,7 @@
 {% extends "tigaserver_app/award_notification.html" %}
 
 {% block title_block %}
-    <title>Sapo morët një çmim pikë!</title>
+    <title>Sapo mor&euml;t nj&euml; &ccedil;mim pik&euml;!</title>
 {% endblock %}
 
 {% block title_header_block %}
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block amount_xp_awarded %}
-    <p>Sapo morët <b style="color:red;">{{ amount_awarded }} pikë!</b></p>
+    <p>Sapo mor&euml;t <b style="color:red;">{{ amount_awarded }} pik&euml;!</b></p>
 {% endblock %}
 
 {% block reason_awarded %}
