--- a/tigaserver_app/templates/tigaserver_app/award_notification_hu.html
+++ b/tigaserver_app/templates/tigaserver_app/award_notification_hu.html
@@ -1,7 +1,7 @@
 {% extends "tigaserver_app/award_notification.html" %}
 
 {% block title_block %}
-    <title>Most pontdíjat kapott!</title>
+    <title>Most pontd&iacute;jat kapott!</title>
 {% endblock %}
 
 {% block title_header_block %}
@@ -23,5 +23,5 @@
 {% endblock %}
 
 {% block congratulations %}
-    <p>Gratulálunk!</p>
+    <p>Gratul&aacute;lunk!</p>
 {% endblock %}
