--- a/tigaserver_app/templates/tigaserver_app/award_notification_pt.html
+++ b/tigaserver_app/templates/tigaserver_app/award_notification_pt.html
@@ -1,7 +1,7 @@
 {% extends "tigaserver_app/award_notification.html" %}
 
 {% block title_block %}
-    <title>Você acabou de receber um prêmio de pontos!</title>
+    <title>Voc&ecirc; acabou de receber um pr&ecirc;mio de pontos!</title>
 {% endblock %}
 
 {% block title_header_block %}
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block amount_xp_awarded %}
-    <p>Você acabou de receber <b style="color:red;">{{ amount_awarded }} pontos!</b></p>
+    <p>Voc&ecirc; acabou de receber <b style="color:red;">{{ amount_awarded }} pontos!</b></p>
 {% endblock %}
 
 {% block reason_awarded %}
@@ -23,5 +23,5 @@
 {% endblock %}
 
 {% block congratulations %}
-    <p>Parabéns!</p>
+    <p>Parab&eacute;ns!</p>
 {% endblock %}
