--- a/tigahelp/templates/tigahelp/privacy_el.html
+++ b/tigahelp/templates/tigahelp/privacy_el.html
@@ -12,68 +12,68 @@
     <h2>Πολιτική απορρήτου</h2>
 </div>
 
-<p>Το Mosquito Alert (σε οποιοδήποτε από τα ονόματα που μπορεί να είχε στο παρελθόν ή να αποκτήσει στο μέλλον) συλλέγει,
-    μεταξύ άλλων, δεδομένα και εικόνες που κοινοποιούνται από εθελοντές και τα καθιστά διαθέσιμα σε τρίτους και στο ευρύ
-    κοινό. Προκειμένου να προστατεύσει το απόρρητο των εθελοντών της, το Mosquito Alert στοχεύει στην αποφυγή της
-    συλλογής προσωπικών πληροφοριών, δηλαδή πληροφοριών που μπορούν να χρησιμοποιηθούν για την ταυτοποίηση ενός
-    συγκεκριμένου φυσικού ατόμου. Έτσι, το Mosquito Alert ζητά από εθελοντές να μην διαβιβάζουν ονόματα, διευθύνσεις,
-    κωδικούς πρόσβασης και οποιαδήποτε άλλη προσωπική πληροφορία κατά την αποστολή αναφορών. Οι ακριβείς τοποθεσίες των
-    παρατηρήσεων συλλέγονται κατά την υποβολή αναφοράς και αυτές μπορεί να συμπίπτουν με την ακριβή τοποθεσία των
-    εθελοντών, αλλά αυτές οι πληροφορίες συνδέονται μόνο με την αναφορά και με ένα τυχαία δημιουργημένο αναγνωριστικό
-    χρήστη. Δεν ζητούνται μεταδεδομένα φωτογραφίας και εάν οι φωτογραφίες που αποστέλλονται στο έργο μέσω της εφαρμογής
-    περιέχουν μεταδεδομένα, αυτά τα μεταδεδομένα διαγράφονται μόλις η εικόνα φτάσει στο διακομιστή έργου, με εξαίρεση τη
-    γεωγραφική τοποθεσία της φωτογραφίας, η οποία θα διατηρηθεί συνδεδεμένη με τη φωτογραφία και ενδέχεται να
-    δημοσιευτεί.</p> <p>Το Mosquito Alert συλλέγει επίσης την κατά προσέγγιση τοποθεσία των εθελοντών σε τυχαία χρονικά
-    διαστήματα (προκειμένου να εκτιμήσει τις γεωγραφικές περιοχές που καλύπτονται ή διερευνώνται από τους εθελοντές),
-    αλλά αυτές οι πληροφορίες συνδέονται επίσης μόνο με ένα τυχαία δημιουργημένο αναγνωριστικό χρήστη. Οι εθελοντές
-    μπορούν να περιλαμβάνουν σημειώσεις και φωτογραφίες στις αναφορές τους, αλλά είναι δική τους ευθύνη να μην
-    συμπεριλαμβάνουν σε αυτές τις σημειώσεις και τις φωτογραφίες οποιεσδήποτε πληροφορίες επιθυμούν να διατηρήσουν
-    ιδιωτικές ή οποιεσδήποτε πληροφορίες που παραβιάζουν τα δικαιώματα απορρήτου άλλων ή δεν συνάδουν με τη συμφωνία
-    χρήστη του Mosquito Alert.</p> <p>Το Mosquito Alert διαθέτει μηχανισμούς για την αποτροπή, στο μέτρο του δυνατού,
-    προσωπικών δεδομένων που ενδέχεται να έχουν αποστείλει κατά λάθος οι χρήστες, παρά τα μέτρα ανωνυμοποίησης, από το
-    να κοινοποιούνται στο ευρύ κοινό. Ομοίως, το Mosquito Alert εφαρμόζει μέτρα για τον εντοπισμό αν έχουν κοινοποιηθεί
-    προσωπικά δεδομένα και για την διαγραφή τους από τη βάση δεδομένων, στο μέτρο του δυνατού. Παρ 'όλα αυτά, εάν σε
-    οποιαδήποτε συγκεκριμένη περίπτωση αυτά τα μέτρα δεν εμποδίσουν τη δημοσίευση προσωπικών δεδομένων, αυτοί που το
-    εντοπίζουν ενθαρρύνονται να ειδοποιήσουν τους υπεύθυνους για το Mosquito Alert, προκειμένου να προχωρήσουν στη
-    διαγραφή της εμφάνισής τους στο δημόσιο χώρο, εάν είναι δυνατόν. Το Mosquito Alert δεν μπορεί να εγγυηθεί τη
-    διαγραφή των προσωπικών δεδομένων που θα μπορούσαν να συλλεχθούν κατά λάθος από το Mosquito Alert παρά τα μέτρα
-    ανωνυμοποίησης, ούτε μπορεί να εγγυηθεί ότι τέτοια δεδομένα δεν θα είναι ορατά στα μέλη του Mosquito Alert ή σε
-    οποιονδήποτε από τους συνεργάτες του ή τρίτους.</p> <p>Σημειώνεται ότι εάν οι συμμετέχοντες μοιράζονται τις
-    παρατηρήσεις τους (αναφορές) σε οποιοδήποτε δημόσιο μέσο, όπως σε κοινωνικά δίκτυα, ενδέχεται αυτές οι παρατηρήσεις
-    να συσχετιστούν με τα προσωπικά τους δεδομένα (π.χ. προσωπικός λογαριασμός σε κοινωνικά δίκτυα), αφαιρώντας έτσι, με
-    εθελοντικό τρόπο, την ανωνυμία που επιδιώκει να παρέχει το έργο.</p> <p>Το Mosquito Alert επιτρέπει στους
-    συμμετέχοντες να διατηρούν τα δεδομένα τους διατηρώντας ταυτόχρονα την ανωνυμία τους, μέσω ενός συστήματος ελέγχου
-    ταυτότητας που χρησιμοποιεί εξωτερικούς λογαριασμούς (email, Facebook, Twitter), μέσω του Firebase. Αυτό επιτρέπει
-    στους συμμετέχοντες να συγχρονίζουν πολλές συσκευές και να ανακτούν δεδομένα εάν πρέπει να απεγκαταστήσουν την
-    εφαρμογή. Αυτή η επιλογή είναι εθελοντική και δεν ενεργοποιείται από προεπιλογή. Σε κάθε περίπτωση, οι πληροφορίες
-    που συλλέγει η Firebase για το σκοπό αυτό δεν αποθηκεύονται στους διακομιστές Mosquito Alert, δεν συνδέονται με τα
-    επιστημονικά δεδομένα που συλλέγονται από το Mosquito Alert και δεν υποβάλλονται σε επεξεργασία από το Mosquito
-    Alert.</p> <p>Μια λεπτομερής λίστα των πληροφοριών που συλλέγει το Mosquito Alert έχει ως εξής:</p>
+<p>Το Mosquito Alert (και σε οποιοδήποτε από τα ονόματα που μπορεί να είχε στο παρελθόν ή να αποκτήσει στο μέλλον)
+    συλλέγει, μεταξύ άλλων, δεδομένα και εικόνες που κοινοποιούνται από εθελοντές και τα καθιστά διαθέσιμα σε τρίτους
+    και στο ευρύ κοινό. Προκειμένου να προστατεύσει το απόρρητο των εθελοντών της, το Mosquito Alert στοχεύει στην
+    αποφυγή της συλλογής προσωπικών πληροφοριών, δηλαδή πληροφοριών που μπορούν να χρησιμοποιηθούν για την ταυτοποίηση
+    ενός συγκεκριμένου φυσικού ατόμου. Έτσι, το Mosquito Alert ζητά από εθελοντές να μην διαβιβάζουν ονόματα,
+    διευθύνσεις, κωδικούς πρόσβασης και οποιαδήποτε άλλη προσωπική πληροφορία κατά την αποστολή αναφορών. Οι ακριβείς
+    τοποθεσίες των παρατηρήσεων συλλέγονται κατά την υποβολή αναφοράς και αυτές μπορεί να συμπίπτουν με την ακριβή
+    τοποθεσία των εθελοντών, αλλά αυτές οι πληροφορίες συνδέονται μόνο με την αναφορά και με ένα τυχαία δημιουργημένο
+    αναγνωριστικό χρήστη. Δεν ζητούνται μεταδεδομένα φωτογραφίας και εάν οι φωτογραφίες που αποστέλλονται στο έργο μέσω
+    της εφαρμογής περιέχουν μεταδεδομένα, αυτά τα μεταδεδομένα διαγράφονται μόλις η εικόνα φτάσει στο διακομιστή έργου,
+    με εξαίρεση τη γεωγραφική τοποθεσία της φωτογραφίας, η οποία θα διατηρηθεί συνδεδεμένη με τη φωτογραφία και
+    ενδέχεται να δημοσιευτεί.</p>
+<p>Το Mosquito Alert, προκειμένου να εκτιμήσει τις γεωγραφικές περιοχές που καλύπτονται ή διερευνώνται από τους
+    εθελοντές, συλλέγει την κατά προσέγγιση τοποθεσία των εθελοντών σε τυχαία χρονικά διαστήματα αλλά αυτές οι
+    πληροφορίες συνδέονται επίσης μόνο με ένα τυχαία δημιουργημένο αναγνωριστικό χρήστη. Οι εθελοντές μπορούν να
+    περιλαμβάνουν σημειώσεις και φωτογραφίες στις αναφορές τους, αλλά είναι δική τους η ευθύνη να μη συμπεριλαμβάνουν σε
+    αυτές τις σημειώσεις και τις φωτογραφίες οποιεσδήποτε πληροφορίες επιθυμούν να διατηρήσουν ιδιωτικές ή οποιεσδήποτε
+    πληροφορίες παραβιάζουν δικαιώματα απορρήτου άλλων ή δε συνάδουν με τη συμφωνία χρήστη του Mosquito Alert.</p>
+<p>Στο μέτρο του δυνατού το Mosquito Alert διαθέτει μηχανισμούς για την αποτροπή κοινοποιήσης στο ευρύ κοινό προσωπικών
+    δεδομένων που ενδέχεται να έχουν αποστείλει κατά λάθος οι χρήστες παρά τα μέτρα ανωνυμοποίησης. Ομοίως, στο μέτρο
+    του δυνατού, το Mosquito Alert εφαρμόζει μέτρα για τον εντοπισμό προσωπικών δεδομένων που έχουν κοινοποιηθεί και την
+    διαγραφή τους από τη βάση δεδομένων. Σε περίπτωση που κάποιος χρήστης εντοπίσει τη δημοσίευση προσωπικών δεδομένων
+    ενθαρρύνονται να ειδοποιήσουν τους υπεύθυνους του Mosquito Alert, προκειμένου να γίνει η διαγραφή της εμφάνισής τους
+    και εφόσον είναι δυνατόν. Το Mosquito Alert δεν μπορεί να εγγυηθεί τη διαγραφή των προσωπικών δεδομένων που
+    συλλέγονται κατά λάθος από το Mosquito Alert παρά τα μέτρα ανωνυμοποίησης, ούτε μπορεί να εγγυηθεί ότι τέτοια
+    δεδομένα δε θα είναι ορατά στα μέλη του Mosquito Alert ή σε οποιονδήποτε από τους συνεργάτες του ή/και τρίτους.</p>
+<p>Σημειώνεται ότι εάν οι συμμετέχοντες μοιράζονται τις παρατηρήσεις τους (αναφορές) σε οποιοδήποτε δημόσιο μέσο, όπως
+    σε κοινωνικά δίκτυα, ενδέχεται αυτές οι παρατηρήσεις να συσχετιστούν με τα προσωπικά τους δεδομένα (π.χ. προσωπικός
+    λογαριασμός σε κοινωνικά δίκτυα), αφαιρώντας έτσι, με εθελοντικό τρόπο, την ανωνυμία που επιδιώκει να παρέχει το
+    έργο.</p>
+<p>Το Mosquito Alert επιτρέπει στους συμμετέχοντες να έχουν διαθέσιμα τα δεδομένα τους, διατηρώντας ταυτόχρονα την
+    ανωνυμία τους, μέσω ενός συστήματος ελέγχου ταυτότητας που χρησιμοποιεί εξωτερικούς λογαριασμούς (email, Facebook,
+    Twitter) μέσω του Firebase. Αυτό επιτρέπει στους συμμετέχοντες να συγχρονίζουν πολλές συσκευές και να ανακτούν
+    δεδομένα εάν πρέπει να απεγκαταστήσουν την εφαρμογή. Αυτή η επιλογή είναι εθελοντική και δεν ενεργοποιείται από
+    προεπιλογή. Σε κάθε περίπτωση, οι πληροφορίες που συλλέγει η Firebase για το σκοπό αυτό δεν αποθηκεύονται στους
+    διακομιστές Mosquito Alert, δε συνδέονται με τα επιστημονικά δεδομένα που συλλέγονται από το Mosquito Alert και δεν
+    υποβάλλονται σε επεξεργασία από το Mosquito Alert.</p>
+<p>Η λίστα των πληροφοριών που συλλέγει το Mosquito Alert έχει ως εξής:</p>
 <ul>
     <li>Αναφορές που συλλέγονται και αποστέλλονται από εθελοντές σε σχέση με χώρους αναπαραγωγής, τσιμπήματα και
-        παρατηρήσεις πιθανών κουνουπιών (Το Mosquito Alert επικεντρώνεται επί του παρόντος σε 5 διαφορετικά είδη
-        κουνουπιών), καθώς και απαντήσεις εθελοντών σε ερωτήσεις που τους αποστέλλονται μέσω της εφαρμογής. Αυτό
-        περιλαμβάνει την ακριβή τοποθεσία των εθελοντικών παρατηρήσεων και φωτογραφιών (καθώς και τη θέση των
-        μεταδεδομένων φωτογραφιών, εάν υπάρχουν), σημειώσεις ή οποιαδήποτε άλλη πληροφορία που προσθέτει ο εθελοντής
-        στην αναφορά.
+        παρατηρήσεις παρουσίας κουνουπιών (Το Mosquito Alert επικεντρώνεται επί του παρόντος σε 5 διαφορετικά είδη
+        κουνουπιών) καθώς και απαντήσεις εθελοντών σε ερωτήσεις που τους αποστέλλονται μέσω της εφαρμογής. Αυτό
+        περιλαμβάνει την ακριβή τοποθεσία των εθελοντικών παρατηρήσεων και φωτογραφιών (καθώς και τη θέση μεταδεδομένων
+        φωτογραφιών, εάν υπάρχουν) σημειώσεις ή οποιαδήποτε άλλη πληροφορία που προσθέτει ο εθελοντής στην αναφορά.
     </li>
-    <li>Πληροφορίες σχετικά με την κατά προσέγγιση θέση των εθελοντών, δειγματοληψία σε λειτουργία υποβάθρου και σε
-        τυχαία χρονικά διαστήματα. Αυτές οι πληροφορίες συλλέγονται για επιστημονικούς σκοπούς, για να γνωρίζουμε τις
-        γεωγραφικές περιοχές που διερευνώνται από τους εθελοντές (προσπάθεαια δειγματοληψίας, δηλαδή, σε ποιες περιοχές
-        βρίσκεται ή δεν συμμετέχει και σε ποιο βαθμό, για να είναι σε θέση να τις συσχετίσει με τον αριθμό των
-        παρατηρήσεων στην ίδια περιοχή για παράδειγμα με τεχνικές μοντελοποίησης ή στατιστικής), και για τη βελτίωση της
-        γνώσης σχετικά με τις οδούς διασποράς κουνουπιών που σχετίζονται με την ανθρώπινη κινητικότητα (δηλαδή, για την
-        καλύτερη κατανόηση της σχέσης μεταξύ του τρόπου με τον οποίο οι άνθρωποι κινούνται σε μεγάλη κλίμακα και της
-        διασποράς αυτών των ειδών στην περιοχή). Αυτές οι πληροφορίες έχουν μεγάλο επιστημονικό ενδιαφέρον. Για να
-        αποφευχθεί η συλλογή των ακριβών θέσεων των εθελοντών, αυτές οι τοποθεσίες τοποθετούνται σε ένα πλέγμα πλάτους
-        και μήκους 0,025 μοιρών και μόνο το αναγνωριστικό των τετραγώνων πλέγματος στα οποία εμπίπτουν μεταδίδεται στον
-        διακομιστή. Έτσι, είναι αδύνατο να προσδιοριστεί η πραγματική τοποθεσία, σε μια περιοχή με 0,025 μοίρες
-        γεωγραφικό πλάτος και με 0,025 μοίρες μήκος (μεταξύ περίπου 3,1 και 7,7 τετραγωνικά χιλιόμετρα, ή μεταξύ 765 και
-        1901 γήπεδα ποδοσφαίρου). Σε κάθε περίπτωση, οι εθελοντές μπορούν να απενεργοποιήσουν αυτήν την επιλογή,
-        ενεργοποιημένη από προεπιλογή, στις Ρυθμίσεις της εφαρμογής.
+    <li>Πληροφορίες σχετικά με την κατά προσέγγιση θέση των εθελοντών με δειγματοληψία σε λειτουργία υποβάθρου και σε
+        τυχαία χρονικά διαστήματα. Αυτές οι πληροφορίες συλλέγονται για επιστημονικούς σκοπούς, προκειμένου να
+        γνωρίζουμε τις γεωγραφικές περιοχές που διερευνώνται από τους εθελοντές για χρήση σε τεχνικές μοντελοποίησης ή
+        στατιστικής (πχ σε ποιες περιοχές γίνεται προσπάθεια δειγματοληψίας και ο βαθμός δειγματοληψίας προκειμένου να
+        συσχετίσει τα δεδομένα αυτά με τον αριθμό των παρατηρήσεων στην ίδια περιοχή). Επίσης οι πληροφορίες αυτές
+        χρησιμοποιούνται για τη βελτίωση της γνώσης σχετικά με τις οδούς διασποράς κουνουπιών που σχετίζονται με την
+        ανθρώπινη κινητικότητα (δηλαδή για την καλύτερη κατανόηση της σχέσης μεταξύ του τρόπου με τον οποίο οι άνθρωποι
+        κινούνται και της διασποράς αυτών των ειδών στην περιοχή). Όλες οι παραπάνω πληροφορίες έχουν μεγάλο
+        επιστημονικό ενδιαφέρον αλλά για να αποφευχθεί η συλλογή των ακριβών θέσεων των εθελοντών, αυτές οι τοποθεσίες
+        τοποθετούνται σε ένα πλέγμα πλάτους και μήκους 0,025 μοιρών και μόνο το αναγνωριστικό των τετραγώνων πλέγματος
+        στα οποία εμπίπτουν μεταδίδεται στον διακομιστή. Έτσι, είναι αδύνατο να προσδιοριστεί η πραγματική τοποθεσία, σε
+        μια περιοχή με 0,025 μοίρες γεωγραφικό πλάτος και με 0,025 μοίρες μήκος (περίπου 3,1 και 7,7 τετραγωνικά
+        χιλιόμετρα, ή σημείο μεταξύ 765 και 1901 γήπεδα ποδοσφαίρου). Σε κάθε περίπτωση, οι εθελοντές μπορούν να
+        απενεργοποιήσουν αυτήν την επιλογή στις Ρυθμίσεις της εφαρμογής (είναι ενεργοποιημένη από προεπιλογή).
     </li>
     <li>Πληροφορίες σχετικά με το μοντέλο του τηλεφώνου, την μπαταρία, τις ρυθμίσεις γλώσσας και την έκδοση της
-        εφαρμογής (δηλαδή, την εγκατεστημένη έκδοση και το λειτουργικό σύστημα και την έκδοση στην οποία είναι
+        εφαρμογής (δηλαδή την εγκατεστημένη έκδοση καθώς και το λειτουργικό σύστημα και την έκδοση στην οποία είναι
         εγκατεστημένο). Αυτές οι πληροφορίες χρησιμοποιούνται για να βοηθήσουν την ερευνητική ομάδα να βελτιώσει την
         εφαρμογή.
     </li>
