--- a/tigahelp/templates/tigahelp/scoring_el.html
+++ b/tigahelp/templates/tigahelp/scoring_el.html
@@ -20,22 +20,23 @@
         <ul>
             <li>Εισβάλλον χωροκατακτητικό κουνούπι <em> Aedes </em>: 20 βαθμοί</li>
             <li>Κοινό κουνούπι: 14 βαθμοί</li>
-            <li>Εστία ανάπτυξης/αναπαραγωγής αποχετευτικό ομβρίων: 20 βαθμοί</li>
+            <li>Εστία ανάπτυξης/αναπαραγωγής σε αποχετευτικό ομβρίων: 20 βαθμοί</li>
             <li>Άλλη εστία ανάπτυξης/αναπαραγωγής σε δημόσιο χώρο: 16 βαθμοί</li>
         </ul>
-        <p>Επιπλέον, υπάρχουν επιπλέον βαθμοί για το πρώτο κουνούπι της περιόδου, την πρώτη αναφορά της ημέρας ή για τη
-            συχνή συμμετοχή. Όταν φτάσετε σε έναν συγκεκριμένο αριθμό αναφορών, δεν παίρνετε μόνο επιπλέον βαθμούς, αλλά
-            παίρνετε και τρόπαια. Υπάρχουν διαφορετικά τρόπαια ανάλογα με τα ορόσημα που έχουν επιτευχθεί.</p>
+        <p>Επιπλέον, υπάρχουν έξτρα βαθμοί για το πρώτο κουνούπι της περιόδου, την πρώτη αναφορά της ημέρας ή για τη
+            συχνή σας συμμετοχή. Όταν φτάσετε σε έναν συγκεκριμένο αριθμό αναφορών, δε παίρνετε μόνο επιπλέον βαθμούς,
+            αλλά παίρνετε και βραβεία. Υπάρχουν διαφορετικά βραβεία ανάλογα με τους στόχους που έχουν επιτευχθεί.</p>
         <p>Οι αναφορές που αποστέλλονται ως κουνούπι αλλά αποδεικνύονται ότι δεν είναι κουνούπια, μετά από την
             επιβεβαίωση των εμπειρογνωμόνων, δε θα λαμβάνουν βαθμούς. Επίσης, μια φωτογραφία που δεν επιτρέπει στους
             ειδικούς να αναγνωρίσουν το κουνούπι ή την εστία ανάπτυξής/αναπαραγωγής τους δε θα βαθμολογηθεί.</p>
-        <p>Η συγκέντρωση βαθμών θα σας επιτρέψει να ανεβείτε σε <b> επίπεδο</b>:</p>
+        <p>Η συγκέντρωση βαθμών θα σας επιτρέψει να ανεβείτε σε <b>επίπεδο</b>:</p>
+        <p>Αναλυτικότερα:</p>
         <ul>
-            <li>(1) Αρχάριος (αρχάριος)</li>
-            <li>(2) Συνεργάτης (συνεισφέρων)</li>
-            <li>(3) Ειδικός (ειδικός)</li>
-            <li>(4) Δάσκαλος (master)</li>
-            <li>(5) Μεγάλος δάσκαλος (grandmaster)</li>
+            <li>1ο επίπεδο: Αρχάριος (πρωτάρης)</li>
+            <li>2ο επίπεδο: Συνεργάτης (συνεισφέρων)</li>
+            <li>3ο επίπεδο: Ειδικός (ειδικός)</li>
+            <li>4ο επίπεδο: Δάσκαλος (master)</li>
+            <li>5ο επίπεδο: Μεγάλος δάσκαλος (grandmaster)</li>
         </ul>
         <p>Αυτά τα εικονίδια υποδεικνύουν το επίπεδο που έχει επιτευχθεί:</p>
 
@@ -46,8 +47,8 @@
             κατάταξης εμφανίζεται η ανάλυση των βαθμών που έλαβε ο χρήστης.</p>
         <p>Κάνοντας κλικ στο "Περισσότερες λεπτομέρειες" μεταβαίνετε στον πίνακα των κατανεμημένων βαθμών.</p>
         <p>Σε αυτήν την ενότητα υπάρχει μια λίστα με τις αναφορές που αποστέλλονται με τη βαθμολογία που λαμβάνετε σε
-            καθεμία από αυτές. Οι αναφορές είναι διαδραστικές, κάνοντας κλικ για να λάβετε την αναλυτική βαθμολογία και
-            την επεξήγηση της βαθμολογίας.</p>
+            καθεμία από αυτές. Οι αναφορές είναι διαδραστικές, κάνοντας κλικ μπορείτε να λάβετε την αναλυτική βαθμολογία
+            και την επεξήγηση της βαθμολογίας.</p>
 
     </div>
 </div>
